--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,27 @@
   text-align: center;
 }
 
+.red{
+  color: red;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.button{
+  background-color: green;
+  color: white;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: lightgreen;
+  color: black;
+}
 /* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
