--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   font-weight: bold;
 }
 
-.button{
+.App button{
   background-color: green;
   color: white;
   font: inherit;
@@ -19,10 +19,19 @@
   cursor: pointer;
 }
 
-.button:hover {
+.App button:hover {
   background-color: lightgreen;
   color: black;
 }
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+}
+
 /* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
